@@ -33,11 +33,13 @@ SUSE113-IA32 \
 SUSE113-AMD64 \
 SUSE114-IA32 \
 SUSE114-AMD64 \
+SUSE121-IA32 \
+SUSE121-AMD64 \
 SUSE-autodetection"
 
 # unsupported os (unofficial package list)
 # unlock this list with, for example:
 # UNSUPPORTED="yes" ./ati-driver-installer-<version>-<architecture>.run --buildpkg SuSE/SUSE114-AMD64
 if [ "${UNSUPPORTED}" = "yes" -o "${UNSUPPORTED}" = "true" -o "${UNSUPPORTED}" = "1"  ]; then
-    SUSE_LIST="${SUSE_LIST} SUSEFACTORY-IA32 SUSEFACTORY-AMD64 SUSE121-IA32 SUSE121-AMD64"
+    SUSE_LIST="${SUSE_LIST} SUSEFACTORY-IA32 SUSEFACTORY-AMD64"
 fi
